# ye-pku-minic

./: .gitignore  CMakeLists.txt  README.md  autotest  enter.sh  error_record.md  generate_nd_testcase.py  grammer.txt  record.md  run.sh  run_gdb.sh  run_koopa.sh  run_perf.sh  run_riscv.sh  test.sh  time.md
examples/: sdf.c  sdf.py  sdf_sysy.c
src/: ast.c  ast.h  codegen.c  codegen.h  koopa_ir.c  koopa_ir.h  main.c  parse.c  parse.h  riscv.c  riscv.h  riscv_perf.c  riscv_perf.h  tokenize.c  tokenize.h  utils.c  utils.h
